2010-10-19   D. V. Wiebe <getdata@ketiltrout.net>   svn:457
	* legacy.c (_GD_GetDirfile): On error, set *error_code (now passed as a
	parameter), copy the error, discard the bad dirfile, and return NULL.

2010-10-18   D. V. Wiebe <getdata@ketiltrout.net>   svn:456
	GetData-0.7.0rc2:

	* encoding.c (_GD_ResolveSymbol _GD_MissingFramework): Fix types for
	USE_MODULES.

2010-10-17   D. V. Wiebe <getdata@ketiltrout.net>   svn:455
	GetData-0.7.0rc1:

	* configure.ac: update library interface numbers.  Removed
	--disable-checkdirfile.

	* MEWS: Update.

2010-10-16   D. V. Wiebe <getdata@ketiltrout.net>   svn:453
	* configure.ac: Generate Makefiles even for bindings we're not using (so we
	can still run maintainer tasks on them.)

2010-10-16   D. V. Wiebe <getdata@ketiltrout.net>   svn:452
	* src/getdata.h.in: Keep anonymous structs and unions in C99-mode.
	* src/internal.h: Helper macros for C99/C89 differences.
	* test/ src/ bindings/: Update for changes.

2010-09-18   D. V. Wiebe <getdata@ketiltrout.net>   svn:448
	* bindings/python/pydirfile.c (gdpy_dirfile_close gdpy_dirfile_discard)
	bindings/cxx/dirfile.cpp (Dirfile::Discard Dirfile::Close)
	bindings/f77/fgetdata.c (_GDF_InitDirfiles) bindings/idl/getdata.c
	(gdidl_init_dirfile): Call gd_invalid_dirfile() instead of using
	GetData C internals.
	* src/open.c (gd_invalid_dirfile): Added.

	* bindings/cxx/: Declare const member functions.

	* configure.ac: Fix mkdir check for C++ compilers masquerading as C
	compilers.

	* src/legacy.c: Humanely initialise _GD_GlobalErrors when possible.

2010-09-17   D. V. Wiebe <getdata@ketiltrout.net>   svn:447
	* test/Makefile.am src/Makefile.am bindings/python/Makefile.am
	bindings/cxx/Makefile.am bindings/f77/test/Makefile.am
	bindings/f77/Makefile.am bindings/idl/Makefile.am util/Makefile.am: Remove
	hardcoded -Wall.
	* m4/compiler.m4 (GD_PROG_CC_WALL GD_PROG_CXX_WALL GD_PROG_FC_WALL
	GD_PROG_F77_WALL): Added.
	* configure.ac: Check whether the compilers accept -Wall
