@@ -13,7 +13,7 @@
 .\" Texts.  A copy of the license is included in the `COPYING.DOC' file
 .\" as part of this distribution.
 .\"
-.TH gd_close 3 "15 October 2010" "Version 0.7.0" "GETDATA"
+.TH gd_close 3 "20 October 2010" "Version 0.7.0" "GETDATA"
 .SH NAME
 gd_close, gd_discard \(em close a dirfile and free associated memory.
 .SH SYNOPSIS
@@ -57,9 +57,10 @@ and
 behave identically.
 
 One of these functions should be called on all pointers returned by
-.BR gd_cbopen (3)
-and
+.BR gd_cbopen (3),
 .BR gd_open (3),
+and
+.BR gd_invalid_dirfile (3),
 even if the call to those function failed.  After
 .BR gd_close ()
 or
@@ -73,7 +74,7 @@ Metadata is written to disk using the current Standards Version as stored in the
 object.  See
 .BR gd_dirfile_standards (3)
 to change or report the current Standards Version.  If the dirfile metadata
-conforms to no known Standards Version, a Standards non-compliant fragment will
+conforms to no known Standards Version, Standards non-compliant metadata will
 be written.
 .SH RETURN VALUE
 .BR gd_close ()
@@ -107,4 +108,5 @@ a call to
 .BR gd_error (3),
 .BR gd_error_string (3),
 .BR gd_flush (3),
+.BR gd_invalid_dirfile (3),
 .BR gd_open (3)
